--- a/app/src/main/res/layout/book_home_item.xml
+++ b/app/src/main/res/layout/book_home_item.xml
@@ -10,7 +10,8 @@
         android:id="@+id/book_cover"
         android:layout_width="120dp"
         android:layout_height="180dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/content_description_book_cover"/>
 
     <TextView
         android:id="@+id/book_title"
