--- a/app/src/main/res/layout/custom_switch.xml
+++ b/app/src/main/res/layout/custom_switch.xml
@@ -14,7 +14,8 @@
         android:src="@drawable/round_light_mode_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/content_description_light_mode"/>
 
     <ImageView
         android:id="@+id/right_icon"
@@ -23,7 +24,8 @@
         android:src="@drawable/round_dark_mode_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/content_description_dark_mode"/>
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switch_compat"
