--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -35,7 +35,8 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/baseline_person_add_alt_1_24" />
+                    android:src="@drawable/baseline_person_add_alt_1_24"
+                    android:contentDescription="@string/content_description_follower_notification" />
 
                 <TextView
                     android:id="@+id/notification_newFollowers_icon_badge"
@@ -65,7 +66,7 @@
                     android:id="@+id/notifications_newFollowers_text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New followers"
+                    android:text="@string/new_followers_notification_title"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -74,7 +75,7 @@
                     android:id="@+id/notifications_newFollowers_text_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Newest follower..."
+                    android:text="@string/new_followers_notification_content"
                     android:textSize="15sp"
                     android:layout_marginStart="2dp"
                     app:layout_constraintTop_toBottomOf="@+id/notifications_newFollowers_text_title"
@@ -88,7 +89,8 @@
                 android:src="@drawable/baseline_arrow_forward_ios_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/content_description_arrow_notification"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -117,7 +119,8 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_baseline_book_filled_24" />
+                    android:src="@drawable/ic_baseline_book_filled_24"
+                    android:contentDescription="@string/content_description_recommended_notification" />
 
                 <TextView
                     android:id="@+id/notification_recommendedBooks_icon_badge"
@@ -147,7 +150,7 @@
                     android:id="@+id/notifications_recommendedBooks_text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recommended books"
+                    android:text="@string/recommended_books_notification_title"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -156,7 +159,7 @@
                     android:id="@+id/notifications_recommendedBooks_text_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Newest book shared from friends..."
+                    android:text="@string/recommended_books_notification_content"
                     android:textSize="15sp"
                     android:layout_marginStart="2dp"
                     app:layout_constraintTop_toBottomOf="@+id/notifications_recommendedBooks_text_title"
@@ -170,7 +173,8 @@
                 android:src="@drawable/baseline_arrow_forward_ios_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/content_description_arrow_notification" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -199,7 +203,8 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/baseline_waving_hand_24" />
+                    android:src="@drawable/baseline_waving_hand_24"
+                    android:contentDescription="@string/content_description_shared_profiles_notification"/>
 
                 <TextView
                     android:id="@+id/notification_sharedProfiles_icon_badge"
@@ -229,7 +234,7 @@
                     android:id="@+id/notifications_sharedProfiles_text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Shared profiles"
+                    android:text="@string/shared_profiles_notification_title"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -238,7 +243,7 @@
                     android:id="@+id/notifications_sharedProfiles_text_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Newest shared profile..."
+                    android:text="@string/shared_profiles_notification_content"
                     android:textSize="15sp"
                     android:layout_marginStart="2dp"
                     app:layout_constraintTop_toBottomOf="@+id/notifications_sharedProfiles_text_title"
@@ -252,7 +257,8 @@
                 android:src="@drawable/baseline_arrow_forward_ios_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/content_description_arrow_notification" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -281,7 +287,8 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/baseline_construction_24" />
+                    android:src="@drawable/baseline_construction_24"
+                    android:contentDescription="@string/content_description_system_notification"/>
 
                 <TextView
                     android:id="@+id/notification_system_icon_badge"
@@ -311,7 +318,7 @@
                     android:id="@+id/notifications_system_text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="System notifications"
+                    android:text="@string/system_notification_title"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -320,7 +327,7 @@
                     android:id="@+id/notifications_system_text_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Newest system message..."
+                    android:text="@string/system_notification_content"
                     android:textSize="15sp"
                     android:layout_marginStart="2dp"
                     app:layout_constraintTop_toBottomOf="@+id/notifications_system_text_title"
@@ -334,7 +341,8 @@
                 android:src="@drawable/baseline_arrow_forward_ios_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/content_description_arrow_notification" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -363,7 +371,8 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/baseline_analytics_24" />
+                    android:src="@drawable/baseline_analytics_24"
+                    android:contentDescription="@string/content_description_statistics_notification"/>
 
                 <TextView
                     android:id="@+id/notification_statistics_icon_badge"
@@ -393,7 +402,7 @@
                     android:id="@+id/notifications_statistics_text_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Statistics"
+                    android:text="@string/statistics_notification_title"
                     android:textSize="25sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -402,7 +411,7 @@
                     android:id="@+id/notifications_statistics_text_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Let's see your progress"
+                    android:text="@string/statistics_notification_content"
                     android:textSize="15sp"
                     android:layout_marginStart="2dp"
                     app:layout_constraintTop_toBottomOf="@+id/notifications_statistics_text_title"
@@ -416,7 +425,8 @@
                 android:src="@drawable/baseline_arrow_forward_ios_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/content_description_arrow_notification" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
