--- a/app/src/main/res/layout/fragment_notifications_page.xml
+++ b/app/src/main/res/layout/fragment_notifications_page.xml
@@ -13,7 +13,7 @@
             android:id="@+id/notificationsPage_noNotifications"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No new notifications yet"
+            android:text="@string/no_notifications_found"
             android:textSize="25sp"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
                 android:id="@+id/notificationsPage_showAllText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Show all"
+                android:text="@string/show_all_notifications"
                 android:textSize="25sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,9 @@
                 android:src="@drawable/baseline_keyboard_arrow_down_24"
                 app:layout_constraintStart_toEndOf="@+id/notificationsPage_showAllText"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:contentDescription="@string/content_description_arrow_notification"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
