--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,10 @@
         <item name="colorControlActivated">@color/rating_yellow</item>
     </style>
 
+    <style name="RoundedEditText" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
 
 
