--- a/app/src/main/res/layout/fragment_profile_image_selector.xml
+++ b/app/src/main/res/layout/fragment_profile_image_selector.xml
@@ -4,30 +4,27 @@
     android:layout_height="match_parent"
     android:paddingBottom="40dp">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="30dp"
-    android:orientation="vertical">
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="Seleziona l'immagine profilo"
-        android:textSize="30sp"
-        />
+        android:paddingBottom="30dp"
+        android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_profile_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="@string/textview_select_avatar"
+            android:textSize="30sp" />
 
-            />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_profile_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"/>
 
-</LinearLayout>
+    </LinearLayout>
+
 </ScrollView>
