--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -32,8 +32,10 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="28dp"
         android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_edit_profile"
+        app:layout_constraintTop_toBottomOf="@id/textview_edit_profile"
+        android:contentDescription="@string/textview_select_avatar"
         />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -43,7 +45,7 @@
         android:layout_marginTop="22dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image_select"
+        app:layout_constraintTop_toBottomOf="@id/profile_image_select"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -76,7 +78,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -107,7 +109,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
         app:passwordToggleEnabled="true"
         app:errorEnabled="true">
 
@@ -139,7 +141,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
         app:passwordToggleEnabled="true"
         app:errorEnabled="true">
 
@@ -173,12 +175,13 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="?attr/colorPrimaryVariant"
         android:text="@string/edit_profile"
+        android:contentDescription="@string/content_description_button_edit_profile"
         android:textColor="@color/white"
         android:textSize="14sp"
         style="@style/Widget.Material3.Button.ElevatedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_confirm" />
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password_confirm" />
 
     <Button
         android:id="@+id/button_undo_changes"
@@ -194,7 +197,7 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_confirm_edit" />
+        app:layout_constraintTop_toBottomOf="@id/button_confirm_edit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
