--- a/app/src/main/res/layout/startup_loading.xml
+++ b/app/src/main/res/layout/startup_loading.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/content_description_logo_startup"
             android:src="@drawable/ic_readify_logo_colored" />
 
     </FrameLayout>
