--- a/app/src/main/res/layout/user_search_item.xml
+++ b/app/src/main/res/layout/user_search_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_gravity="center_vertical"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/imageview_avatar"
             tools:src="@drawable/ic_baseline_profile_24"
             />
 
