--- a/app/src/main/res/layout/book_collection_item.xml
+++ b/app/src/main/res/layout/book_collection_item.xml
@@ -6,6 +6,7 @@
     android:id="@+id/book_collection_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="160dp"
     >
 
         <ImageView
@@ -18,6 +19,7 @@
             android:layout_marginVertical="10dp"
             android:paddingVertical="5dp"
             android:paddingHorizontal="5dp"
+            android:layout_gravity="center_vertical"
             tools:src="@drawable/image_not_available"
             />
 
