--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,7 +80,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="12dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/textview_home_trending"
+            app:layout_constraintTop_toBottomOf="@id/progressbar_trending"
             tools:listitem="@layout/book_home_item"
             tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             >
@@ -121,7 +121,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="12dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/textview_home_suggested"
+        app:layout_constraintTop_toBottomOf="@id/progressbar_suggested"
         tools:listitem="@layout/book_home_item"
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         >
@@ -161,7 +161,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="12dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/textview_home_recent"
+        app:layout_constraintTop_toBottomOf="@id/progressbar_recent"
         tools:listitem="@layout/book_home_item"
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         >
