--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -22,18 +22,6 @@
             tools:text="@string/textview_collection_name_placeholder"
             />
 
-        <ImageView
-            android:id="@+id/collection_fragment_collection_visibility"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
-            app:layout_constraintStart_toEndOf="@id/collection_fragment_collection_name"
-            app:layout_constraintTop_toTopOf="@id/collection_fragment_collection_name"
-            android:contentDescription="@string/content_description_collection_visibility"
-            tools:src="@drawable/baseline_lock_outline_24"
-            />
-
         <TextView
             android:id="@+id/collection_fragment_number_of_books"
             android:layout_width="wrap_content"
@@ -43,7 +31,48 @@
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/collection_fragment_collection_name"
-            tools:text="45"
+            tools:text="45 books"
+            />
+
+        <ImageView
+            android:id="@+id/collection_fragment_collection_visibility"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toEndOf="@id/collection_fragment_number_of_books"
+            app:layout_constraintTop_toBottomOf="@id/collection_fragment_collection_name"
+            android:contentDescription="@string/content_description_collection_visibility"
+            tools:src="@drawable/baseline_lock_outline_24"
+            />
+
+        <Spinner
+            android:id="@+id/collection_fragment_spinner_collection_visibility"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/collection_fragment_collection_visibility"
+            app:layout_constraintTop_toBottomOf="@id/collection_fragment_collection_name"
+            android:gravity="center_vertical"
+            android:entries="@array/visibility"
+            tools:entries="@array/visibility"
+            tools:listitem="@layout/support_simple_spinner_dropdown_item"
+            tools:visibility="gone"
+            />
+
+        <TextView
+            android:id="@+id/collection_fragment_textview_collection_visibility"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:lines="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/collection_fragment_collection_visibility"
+            app:layout_constraintTop_toBottomOf="@id/collection_fragment_collection_name"
+            android:gravity="center_vertical"
+            tools:visibility="visible"
+            tools:text="Public"
             />
 
         <androidx.recyclerview.widget.RecyclerView
