--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -49,6 +49,7 @@
         app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
         app:boxStrokeColor="@color/white"
+        app:hintTextColor="@color/white"
         app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -78,6 +79,7 @@
         app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
         app:boxStrokeColor="@color/white"
+        app:hintTextColor="@color/white"
         app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -108,18 +110,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
 
-    <Button
-        android:id="@+id/button_forgot_password"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="136dp"
-        android:textColor="@color/white"
-        android:text="@string/forgot_password"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_google_login"
-        app:textAllCaps="false" />
 
 
     <Button
