--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,6 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="?attr/backgroundColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -46,13 +45,16 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/profile_image_select"
-        app:errorEnabled="true">
+        app:shapeAppearanceOverlay="@style/RoundedEditText"
+        app:errorEnabled="true"
+        app:boxStrokeColor="@color/text_input_box_stroke_color"
+        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_edit_text_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_textbox_bl"
             android:drawableStart="@drawable/ic_baseline_profile_24"
             android:drawablePadding="20dp"
             android:hint="@string/username"
@@ -79,13 +81,16 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
-        app:errorEnabled="true">
+        app:shapeAppearanceOverlay="@style/RoundedEditText"
+        app:errorEnabled="true"
+        app:boxStrokeColor="@color/text_input_box_stroke_color"
+        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_textbox_bl"
             android:drawableStart="@drawable/ic_baseline_email_24"
             android:drawablePadding="20dp"
             android:hint="@string/email"
@@ -111,13 +116,16 @@
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
         app:passwordToggleEnabled="true"
-        app:errorEnabled="true">
+        app:shapeAppearanceOverlay="@style/RoundedEditText"
+        app:errorEnabled="true"
+        app:boxStrokeColor="@color/text_input_box_stroke_color"
+        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_textbox_bl"
             android:drawableStart="@drawable/ic_baseline_vpn_key_24"
             android:drawablePadding="20dp"
             android:hint="@string/password"
@@ -143,13 +151,16 @@
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
         app:passwordToggleEnabled="true"
-        app:errorEnabled="true">
+        app:shapeAppearanceOverlay="@style/RoundedEditText"
+        app:errorEnabled="true"
+        app:boxStrokeColor="@color/text_input_box_stroke_color"
+        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_edit_text_password_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_textbox_bl"
             android:drawableStart="@drawable/ic_baseline_vpn_key_24"
             android:drawablePadding="20dp"
             android:hint="@string/password_confirm"
