--- a/app/src/main/res/layout/fragment_tab_search_books.xml
+++ b/app/src/main/res/layout/fragment_tab_search_books.xml
@@ -31,7 +31,12 @@
         app:layout_constraintEnd_toStartOf="@id/button_search_filter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/ic_baseline_search_24">
+        app:startIconDrawable="@drawable/ic_baseline_search_24"
+        app:shapeAppearanceOverlay="@style/RoundedEditText"
+        app:errorEnabled="true"
+        app:boxStrokeColor="@color/text_input_box_stroke_color"
+        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edittext_search"
@@ -49,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="15dp"
         app:icon="@drawable/ic_baseline_filter_list_24"
         app:iconTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="@id/textinputlayout_search"
