--- a/app/src/main/res/layout/fragment_tab_search_users.xml
+++ b/app/src/main/res/layout/fragment_tab_search_users.xml
@@ -28,7 +28,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/ic_baseline_search_24">
+        app:startIconDrawable="@drawable/ic_baseline_search_24"
+        app:shapeAppearanceOverlay="@style/RoundedEditText"
+        app:errorEnabled="true"
+        app:boxStrokeColor="@color/text_input_box_stroke_color"
+        app:hintTextColor="?attr/colorSecondary"
+        app:boxStrokeWidth="3dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edittext_search_users"
