Added checks on collections creation

--- a/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_to_collection.xml
@@ -148,9 +148,10 @@
                 android:id="@+id/text_input_layout_add_collection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="48dp"
                 android:hint="@string/textview_hint_insert_collection_name"
                 android:layout_marginTop="6dp"
-                app:endIconMode="clear_text"
+                app:errorEnabled="true"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -217,7 +218,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/button_add_collection"
                 android:textColor="?attr/colorOnPrimary"
-                android:backgroundTint="?attr/colorAccent"
+                android:backgroundTint="@color/grey_disabled_item"
                 android:textSize="20sp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/textview_visibility_description"
