--- a/app/src/main/res/layout/bottom_sheet_collection_creation.xml
+++ b/app/src/main/res/layout/bottom_sheet_collection_creation.xml
@@ -88,8 +88,8 @@
             android:layout_height="wrap_content"
             android:hint="@string/textview_hint_insert_collection_name"
             android:layout_marginTop="6dp"
-            app:endIconMode="clear_text"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_collection_name_title">
@@ -148,7 +148,7 @@
             android:layout_marginHorizontal="60dp"
             android:text="@string/button_add_collection"
             android:textColor="@color/white"
-            android:backgroundTint="@color/login_blue"
+            android:backgroundTint="@color/grey_disabled_item"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/textview_visibility_description"
