--- a/app/src/main/res/layout/select_collection_item.xml
+++ b/app/src/main/res/layout/select_collection_item.xml
@@ -5,19 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textview_collection_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         style="@style/Widget.MaterialComponents.TextView"
         android:textSize="24sp"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="6dp"
-        tools:text="CollectionName"
-        />
+        tools:text="CollectionName" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textview_number_of_books"
@@ -38,7 +38,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginVertical="8dp"
-        android:layout_marginHorizontal="12dp"
-        />
+        android:layout_marginHorizontal="12dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
