--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Readify" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">#00004A</item>
+        <item name="colorPrimary">#000077</item>
         <item name="colorPrimaryVariant">#334C9C</item>
         <item name="colorOnPrimary">#FFFFFF</item>
 
-        <item name="colorSecondary">#005050</item>
+        <item name="colorSecondary">#016868</item>
         <item name="colorSecondaryVariant">#6AB8CF</item>
         <item name="colorOnSecondary">#FFFFFF</item>
 
