--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -91,43 +91,6 @@
             android:layout_marginEnd="50dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_layout_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
-        app:shapeAppearanceOverlay="@style/RoundedEditText"
-        app:errorEnabled="true"
-        app:boxStrokeColor="@color/text_input_box_stroke_color"
-        app:hintTextColor="?attr/colorSecondary"
-        app:boxStrokeWidth="3dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/text_input_edit_text_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_baseline_email_24"
-            android:drawablePadding="20dp"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress" />
-
-        <TextView
-            android:id="@+id/settings_email_error_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FF0000"
-            android:textSize="20sp"
-            android:visibility="gone"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_bio"
         android:layout_width="match_parent"
@@ -135,7 +98,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_username"
         app:shapeAppearanceOverlay="@style/RoundedEditText"
         app:errorEnabled="true"
         app:boxStrokeColor="@color/text_input_box_stroke_color"
@@ -164,77 +127,6 @@
             android:layout_marginEnd="50dp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_layout_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/text_input_layout_bio"
-        app:passwordToggleEnabled="true"
-        app:shapeAppearanceOverlay="@style/RoundedEditText"
-        app:errorEnabled="true"
-        app:boxStrokeColor="@color/text_input_box_stroke_color"
-        app:hintTextColor="?attr/colorSecondary"
-        app:boxStrokeWidth="3dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/text_input_edit_text_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
-            android:drawablePadding="20dp"
-            android:hint="@string/password"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/settings_password_error_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FF0000"
-            android:textSize="20sp"
-            android:visibility="gone"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_layout_password_confirm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
-        app:passwordToggleEnabled="true"
-        app:shapeAppearanceOverlay="@style/RoundedEditText"
-        app:errorEnabled="true"
-        app:boxStrokeColor="@color/text_input_box_stroke_color"
-        app:hintTextColor="?attr/colorSecondary"
-        app:boxStrokeWidth="3dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/text_input_edit_text_password_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
-            android:drawablePadding="20dp"
-            android:hint="@string/password_confirm"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/settings_confirm_password_error_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FF0000"
-            android:textSize="20sp"
-            android:visibility="gone"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <Button
         android:id="@+id/button_confirm_edit"
         android:layout_width="0dp"
@@ -250,7 +142,7 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password_confirm" />
+        app:layout_constraintTop_toBottomOf="@id/text_input_layout_bio" />
 
     <Button
         android:id="@+id/button_undo_changes"
@@ -267,6 +159,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_confirm_edit" />
+
+    <Button
+        android:id="@+id/button_navigate_to_sensible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit sensible data"
+        android:textSize="14sp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/orange"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_undo_changes"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
