--- a/app/src/main/res/layout/book_search_item.xml
+++ b/app/src/main/res/layout/book_search_item.xml
@@ -15,50 +15,74 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <ImageView
                 android:id="@+id/imageview_book_cover"
                 android:layout_width="90dp"
-                android:layout_height="125dp"
+                android:layout_height="140dp"
+                app:layout_constraintHeight_default="wrap"
+                app:layout_constraintDimensionRatio="h"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginVertical="6dp"
                 android:contentDescription="@string/content_description_book_cover"
-                tools:srcCompat="@tools:sample/avatars"
+                tools:src="@drawable/ic_outline_book_outlined_24"
                 />
 
-            <TextView
-                android:id="@+id/textview_book_title"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="25dp"
-                android:text="@string/placeholder_book_title"
-                android:maxWidth="200dp"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_default="wrap"
+                app:layout_constraintStart_toEndOf="@id/imageview_book_cover"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/textview_book_description"
-                app:layout_constraintStart_toEndOf="@+id/imageview_book_cover"
-                style="@style/TextAppearance.Material3.TitleMedium"
-                android:lines="1"
-                android:ellipsize="end"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/imagebutton_add_icon"
+                app:layout_constrainedWidth="true"
+                android:layout_marginTop="6dp"
+                android:layout_marginStart="24dp"
+                >
 
-            <TextView
-                android:id="@+id/textview_book_description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-                android:text="@string/placeholder_book_description"
-                app:layout_constraintStart_toEndOf="@+id/imageview_book_cover"
-                app:layout_constraintEnd_toStartOf="@+id/imagebutton_add_icon"
-                app:layout_constraintTop_toBottomOf="@id/textview_book_title"
-                style="@style/TextAppearance.Material3.BodyMedium"
-                android:lines="3"
-                android:ellipsize="end"
-                 />
+                <TextView
+                    android:id="@+id/textview_book_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/placeholder_book_title"
+                    android:maxWidth="200dp"
+                    app:layout_constrainedHeight="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    style="@style/TextAppearance.Material3.TitleMedium"
+                    android:lines="1"
+                    android:ellipsize="end"
+                    />
+
+                <TextView
+                    android:id="@+id/textview_book_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/placeholder_book_description"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constrainedHeight="true"
+                    app:layout_constrainedWidth="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textview_book_title"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    style="@style/TextAppearance.Material3.BodyMedium"
+                    android:lines="3"
+                    android:ellipsize="end"
+                    android:textAlignment="viewStart"
+                    />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
             <ImageButton
@@ -68,6 +92,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="20dp"
                 android:contentDescription="@string/content_description_add_to_bookshelf"
+                app:layout_constraintStart_toEndOf="@id/container_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
