--- a/app/src/main/res/layout/fragment_tab_search_books.xml
+++ b/app/src/main/res/layout/fragment_tab_search_books.xml
@@ -6,8 +6,8 @@
     android:id="@+id/search_books_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    >
+    android:paddingBottom="90dp"
+    android:fitsSystemWindows="true" >
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progressindicator_search_books"
@@ -21,7 +21,9 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinputlayout_search"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        android:minWidth="300dp"
+        android:maxWidth="485dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_search_book"
         android:padding="16dp"
@@ -34,7 +36,8 @@
         app:errorEnabled="true"
         app:boxStrokeColor="@color/text_input_box_stroke_color"
         app:hintTextColor="?attr/colorSecondary"
-        app:boxStrokeWidth="3dp">
+        app:boxStrokeWidth="2dp"
+        app:cursorColor="?attr/colorAccent" >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edittext_search"
@@ -108,11 +111,14 @@
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
+        app:layout_constrainedHeight="true"
         app:layout_constraintTop_toBottomOf="@id/textinputlayout_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:itemCount="12"
-        tools:listitem="@layout/book_search_item" />
+        tools:listitem="@layout/book_search_item"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
